tests/NormalTests/paczka1/small_fuzzy/63455043.err
Error in line 1: 4Xk1 A306 19,1
Error in line 4: 4Xk1 S877 40,1
Error in line 7: dkZxg2XH S877 31,2
